<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotographR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">PhotographR</string>
    <string name="description">PhotographR is a recommender system for Travel and Nature photographers designed for smart phones. This system uses your location data and time to retrieve a set of geotagged photos as suggestion taken near that place around that time from online photo-sharing network, flickr.</string>
    <string name="reg_prompt">Please Register to get suggestions from PhotographR:</string>
    <string name="reg_btn_label">Register to PhotographR</string>
    <string name="unreg_btn_label">Unregister to PhotographR</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_help">Help</string>
    <string name="action_suggest_me_now">Suggest Me Now</string>
    <string name="action_view_mode">View Mode</string>
    <string name="title_activity_photo_details">PhotoDetailsActivity</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="title_activity_preference_settings">PreferenceSettingsActivity</string>
    <string name="suggest_me_now">Suggest Me Now</string>
    <string name="tip_immediate">This will contact Photograph-R server immediately with your location data at start-up of the application</string>
    <string name="chk_bg_label">Keep Running the Background Service</string>
    <string name="tips_bg">This will start/stop a background service which submits location data to server if your location is changed by at least 100m and you get suggestions automatically with location change</string>
    <string name="chk_alarm_label">Periodic Update</string>
    <string name="tips_alarm">This will send location data to server periodically</string>
    <string name="accuracy_of_suggestiotip_n">Accuracy of Suggestion</string>
    <string name="tip_accuracy_of_suggestion">Search Radius: </string>
    <string name="msg_no_photo">No photo available. Press refresh to get suggestions.</string>
    <string name="title_activity_photo_map">PhotoMapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_single_photo">SinglePhotoActivity</string>
    <string name="title_activity_single_photo_map">SinglePhotoMapActivity</string>
    <string name="ic_get_me_there">Get Me There</string>

</resources>