<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/DeepBlue" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/reg_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/DeepOrange" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:onClick="registerToGCM"
        android:text="@string/reg_btn_label" />

    <Button
        android:id="@+id/btnUnregister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:onClick="unregisterToGCM"
        android:text="@string/unreg_btn_label"
        android:visibility="gone" />

</LinearLayout>